force-app/main/default/objects/Additional_Campaigns__c/Additional_Campaigns__c.object-meta.xml
<CustomObject>
    <description>Used to allow more than one Campaign to be associated to a Case.</description>
    <label>Additional Campaigns</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Additional Campaigns Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>