force-app/main/default/objects/Additional_Campaigns__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Additional_Campaigns</relationshipLabel>
    <relationshipName>Additional_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>