force-app/main/default/objects/Additional_Campaigns__c/fields/Pub_Infraction__c.field-meta.xml
<CustomField>
    <fullName>Pub_Infraction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pub Infraction</label>
    <referenceTo>Pub_Infraction__c</referenceTo>
    <relationshipLabel>Additional Campaigns</relationshipLabel>
    <relationshipName>Additional_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>